@@ -28,10 +28,11 @@
 package org.hisp.dhis.tracker.imports.converter;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.note.Note;
 import org.hisp.dhis.tracker.imports.domain.User;
 import org.hisp.dhis.tracker.imports.preheat.TrackerPreheat;
+import org.hisp.dhis.user.UserDetails;
 import org.hisp.dhis.util.DateUtils;
 import org.springframework.stereotype.Service;
 
@@ -39,6 +40,7 @@ import org.springframework.stereotype.Service;
  * @author Luciano Fiandesio
  */
 @Service
+@RequiredArgsConstructor
 public class NotesConverterService
     implements TrackerConverterService<org.hisp.dhis.tracker.imports.domain.Note, Note> {
   @Override
@@ -61,24 +63,27 @@ public class NotesConverterService
 
   @Override
   public List<org.hisp.dhis.tracker.imports.domain.Note> to(List<Note> notes) {
-    return notes.stream().map(this::to).collect(Collectors.toList());
+    return notes.stream().map(this::to).toList();
   }
 
   @Override
-  public Note from(TrackerPreheat preheat, org.hisp.dhis.tracker.imports.domain.Note note) {
+  public Note from(
+      TrackerPreheat preheat, org.hisp.dhis.tracker.imports.domain.Note note, UserDetails user) {
     org.hisp.dhis.note.Note trackerNote = new org.hisp.dhis.note.Note();
     trackerNote.setUid(note.getNote());
     trackerNote.setAutoFields();
     trackerNote.setNoteText(note.getValue());
 
-    trackerNote.setLastUpdatedBy(preheat.getUser());
+    trackerNote.setLastUpdatedBy(preheat.getUserByUid(user.getUid()).orElse(null));
     trackerNote.setCreator(note.getStoredBy());
     return trackerNote;
   }
 
   @Override
   public List<Note> from(
-      TrackerPreheat preheat, List<org.hisp.dhis.tracker.imports.domain.Note> notes) {
-    return notes.stream().map(n -> from(preheat, n)).collect(Collectors.toList());
+      TrackerPreheat preheat,
+      List<org.hisp.dhis.tracker.imports.domain.Note> notes,
+      UserDetails user) {
+    return notes.stream().map(n -> from(preheat, n, user)).toList();
   }
 }
