@@ -30,11 +30,12 @@ package org.hisp.dhis.tracker.imports.converter;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
+import org.hisp.dhis.program.UserInfoSnapshot;
 import org.hisp.dhis.trackedentity.TrackedEntity;
 import org.hisp.dhis.trackedentity.TrackedEntityType;
 import org.hisp.dhis.tracker.imports.preheat.TrackerPreheat;
+import org.hisp.dhis.user.UserDetails;
 import org.hisp.dhis.util.DateUtils;
 import org.springframework.stereotype.Service;
 
@@ -69,27 +70,31 @@ public class TrackedEntityTrackerConverterService
 
               return trackedEntity;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
   public TrackedEntity from(
-      TrackerPreheat preheat, org.hisp.dhis.tracker.imports.domain.TrackedEntity trackedEntity) {
+      TrackerPreheat preheat,
+      org.hisp.dhis.tracker.imports.domain.TrackedEntity trackedEntity,
+      UserDetails user) {
     TrackedEntity te = preheat.getTrackedEntity(trackedEntity.getTrackedEntity());
-    return from(preheat, trackedEntity, te);
+    return from(preheat, trackedEntity, te, user);
   }
 
   @Override
   public List<TrackedEntity> from(
       TrackerPreheat preheat,
-      List<org.hisp.dhis.tracker.imports.domain.TrackedEntity> trackedEntities) {
-    return trackedEntities.stream().map(te -> from(preheat, te)).collect(Collectors.toList());
+      List<org.hisp.dhis.tracker.imports.domain.TrackedEntity> trackedEntities,
+      UserDetails user) {
+    return trackedEntities.stream().map(te -> from(preheat, te, user)).toList();
   }
 
   private TrackedEntity from(
       TrackerPreheat preheat,
       org.hisp.dhis.tracker.imports.domain.TrackedEntity teFrom,
-      TrackedEntity teTo) {
+      TrackedEntity teTo,
+      UserDetails user) {
     OrganisationUnit organisationUnit = preheat.getOrganisationUnit(teFrom.getOrgUnit());
     TrackedEntityType trackedEntityType =
         preheat.getTrackedEntityType(teFrom.getTrackedEntityType());
@@ -100,10 +105,10 @@ public class TrackedEntityTrackerConverterService
       teTo = new TrackedEntity();
       teTo.setUid(teFrom.getTrackedEntity());
       teTo.setCreated(now);
-      teTo.setCreatedByUserInfo(preheat.getUserInfo());
+      teTo.setCreatedByUserInfo(UserInfoSnapshot.from(user));
     }
 
-    teTo.setLastUpdatedByUserInfo(preheat.getUserInfo());
+    teTo.setLastUpdatedByUserInfo(UserInfoSnapshot.from(user));
     teTo.setStoredBy(teFrom.getStoredBy());
     teTo.setLastUpdated(now);
     teTo.setDeleted(false);
